updated season data

--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "modern-cause",
+   "id": "indie-bullet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "negative-thumbnail",
+   "id": "dietary-fighter",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "younger-fiction",
+   "id": "filled-phrase",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "weekly-verification",
+   "id": "historic-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alpha-intention",
+   "id": "burning-rebate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-heath",
+   "id": "amino-wedding",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "gorgeous-cheese",
+   "id": "scientific-mention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "social-oregon",
+   "id": "disciplinary-details",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-skiing",
+   "id": "lesser-wireless",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "foster-lawsuit",
+   "id": "aware-greek",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "documented-greene",
+   "id": "approximate-devices",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southeast-morris",
+   "id": "dried-there",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "exciting-bride",
+   "id": "characteristic-peripheral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fabulous-gabriel",
+   "id": "disturbed-nursing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "tracked-japanese",
+   "id": "distinct-atmosphere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "experimental-raise",
+   "id": "judicial-refrigerator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "complicated-reggae",
+   "id": "finite-aurora",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-dakota",
+   "id": "appropriate-franklin",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "natural-colony",
+   "id": "utility-belarus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,9 +432,18 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "gentle-neighbor",
+   "id": "moral-indianapolis",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last date: 2023-03-02\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "final_check()"
    ]
@@ -442,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efficient-friday",
+   "id": "crude-placement",
    "metadata": {},
    "outputs": [],
    "source": []
