--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "federal-proxy",
+   "id": "frank-consequence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "helpful-obligation",
+   "id": "related-reliance",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-salmon",
+   "id": "bottom-needle",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "hazardous-granny",
+   "id": "reliable-biotechnology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "agricultural-stream",
+   "id": "charitable-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monthly-calibration",
+   "id": "efficient-spray",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fabulous-multiple",
+   "id": "twenty-associate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "developmental-confusion",
+   "id": "fifty-smell",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-sport",
+   "id": "improved-anthropology",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "binding-workstation",
+   "id": "complicated-planner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "immune-challenge",
+   "id": "capital-lambda",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excited-ownership",
+   "id": "short-binding",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bridal-spencer",
+   "id": "floral-discretion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "spread-answer",
+   "id": "induced-revelation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "formed-policy",
+   "id": "sought-infrared",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "usual-miracle",
+   "execution_count": 11,
+   "id": "binary-stand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,17 +318,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "front-supplier",
+   "execution_count": 12,
+   "id": "compliant-address",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20252 entries, 0 to 20251\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   date        20252 non-null  object \n",
+      " 1   name        20252 non-null  object \n",
+      " 2   team        20252 non-null  object \n",
+      " 3   opp         20252 non-null  object \n",
+      " 4   fpts        20252 non-null  float64\n",
+      " 5   mp          20252 non-null  float64\n",
+      " 6   fppm        20252 non-null  float64\n",
+      " 7   home        20252 non-null  int64  \n",
+      " 8   w           20252 non-null  object \n",
+      " 9   w_pts       20252 non-null  int64  \n",
+      " 10  l           20252 non-null  object \n",
+      " 11  l_pts       20252 non-null  int64  \n",
+      " 12  injury      20252 non-null  int64  \n",
+      " 13  starter     20252 non-null  int64  \n",
+      " 14  fg          20252 non-null  int64  \n",
+      " 15  fga         20252 non-null  int64  \n",
+      " 16  fg_perc     20252 non-null  float64\n",
+      " 17  3p          20252 non-null  int64  \n",
+      " 18  3pa         20252 non-null  int64  \n",
+      " 19  3p_perc     20252 non-null  float64\n",
+      " 20  ft          20252 non-null  int64  \n",
+      " 21  fta         20252 non-null  int64  \n",
+      " 22  ft_perc     20252 non-null  float64\n",
+      " 23  orb         20252 non-null  int64  \n",
+      " 24  drb         20252 non-null  int64  \n",
+      " 25  trb         20252 non-null  int64  \n",
+      " 26  ast         20252 non-null  int64  \n",
+      " 27  stl         20252 non-null  int64  \n",
+      " 28  blk         20252 non-null  int64  \n",
+      " 29  tov         20252 non-null  int64  \n",
+      " 30  pf          20252 non-null  int64  \n",
+      " 31  pts         20252 non-null  int64  \n",
+      " 32  plus_minus  20252 non-null  float64\n",
+      " 33  ts          20252 non-null  float64\n",
+      " 34  efg         20252 non-null  float64\n",
+      " 35  3par        20252 non-null  float64\n",
+      " 36  ftr         20252 non-null  float64\n",
+      " 37  orb_perc    20252 non-null  float64\n",
+      " 38  drb_perc    20252 non-null  float64\n",
+      " 39  trb_perc    20252 non-null  float64\n",
+      " 40  ast_perc    20252 non-null  float64\n",
+      " 41  stl_perc    20252 non-null  float64\n",
+      " 42  blk_perc    20252 non-null  float64\n",
+      " 43  tov_perc    20252 non-null  float64\n",
+      " 44  usg         20252 non-null  float64\n",
+      " 45  ortg        20252 non-null  int64  \n",
+      " 46  drtg        20252 non-null  int64  \n",
+      " 47  bpm         20252 non-null  float64\n",
+      " 48  total_pts   20252 non-null  int64  \n",
+      " 49  pts_diff    20252 non-null  int64  \n",
+      "dtypes: float64(20), int64(24), object(6)\n",
+      "memory usage: 7.7+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "load_clean().info()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-recognition",
+   "id": "numerous-emphasis",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -340,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "systematic-birthday",
+   "execution_count": 13,
+   "id": "native-optimization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,10 +431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aging-tribune",
+   "execution_count": 14,
+   "id": "stretch-implement",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last date: 2023-03-04\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "final_check()"
    ]
@@ -378,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liked-corps",
+   "id": "resident-static",
    "metadata": {},
    "outputs": [],
    "source": []
