updated season data

--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sunrise-messenger",
+   "id": "decimal-skating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greatest-liquid",
+   "id": "level-pride",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlling-highland",
+   "id": "structured-investor",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "julian-religious",
+   "id": "attached-frank",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "standard-insertion",
+   "id": "fitted-staff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bronze-roulette",
+   "id": "federal-activity",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "comprehensive-delta",
+   "id": "parliamentary-barrier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "precise-closer",
+   "id": "selected-enzyme",
    "metadata": {},
    "outputs": [
     {
@@ -92,60 +92,60 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 33328 entries, 0 to 33327\n",
+      "RangeIndex: 34089 entries, 0 to 34088\n",
       "Data columns (total 48 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   Date      33328 non-null  object \n",
-      " 1   Name      33314 non-null  object \n",
-      " 2   Team      33328 non-null  object \n",
-      " 3   Opp       33328 non-null  object \n",
-      " 4   FPTS      33328 non-null  float64\n",
-      " 5   MP        33328 non-null  float64\n",
-      " 6   FPTS/MP   33328 non-null  float64\n",
-      " 7   Home      33328 non-null  int64  \n",
-      " 8   W         33328 non-null  object \n",
-      " 9   W_PTS     33328 non-null  int64  \n",
-      " 10  L         33328 non-null  object \n",
-      " 11  L_PTS     33328 non-null  int64  \n",
-      " 12  Injury    33328 non-null  int64  \n",
-      " 13  Starter   33328 non-null  int64  \n",
-      " 14  FG        33328 non-null  float64\n",
-      " 15  FGA       33328 non-null  float64\n",
-      " 16  FG_perc   33328 non-null  float64\n",
-      " 17  3P        33328 non-null  float64\n",
-      " 18  3PA       33328 non-null  float64\n",
-      " 19  3P_perc   33328 non-null  float64\n",
-      " 20  FT        33328 non-null  float64\n",
-      " 21  FTA       33328 non-null  float64\n",
-      " 22  FT_perc   33328 non-null  float64\n",
-      " 23  ORB       33328 non-null  float64\n",
-      " 24  DRB       33328 non-null  float64\n",
-      " 25  TRB       33328 non-null  float64\n",
-      " 26  AST       33328 non-null  float64\n",
-      " 27  STL       33328 non-null  float64\n",
-      " 28  BLK       33328 non-null  float64\n",
-      " 29  TOV       33328 non-null  float64\n",
-      " 30  PF        33328 non-null  float64\n",
-      " 31  PTS       33328 non-null  float64\n",
-      " 32  +/-       33328 non-null  float64\n",
-      " 33  TS_perc   33328 non-null  float64\n",
-      " 34  eFG_perc  33328 non-null  float64\n",
-      " 35  3PAr      33328 non-null  float64\n",
-      " 36  FTr       33328 non-null  float64\n",
-      " 37  ORB_perc  33328 non-null  float64\n",
-      " 38  DRB_perc  33328 non-null  float64\n",
-      " 39  TRB_perc  33328 non-null  float64\n",
-      " 40  AST_perc  33328 non-null  float64\n",
-      " 41  STL_perc  33328 non-null  float64\n",
-      " 42  BLK_perc  33328 non-null  float64\n",
-      " 43  TOV_perc  33328 non-null  float64\n",
-      " 44  USG_perc  33328 non-null  float64\n",
-      " 45  ORtg      33328 non-null  float64\n",
-      " 46  DRtg      33328 non-null  float64\n",
-      " 47  BPM       33328 non-null  float64\n",
+      " 0   Date      34089 non-null  object \n",
+      " 1   Name      34075 non-null  object \n",
+      " 2   Team      34089 non-null  object \n",
+      " 3   Opp       34089 non-null  object \n",
+      " 4   FPTS      34089 non-null  float64\n",
+      " 5   MP        34089 non-null  float64\n",
+      " 6   FPTS/MP   34089 non-null  float64\n",
+      " 7   Home      34089 non-null  int64  \n",
+      " 8   W         34089 non-null  object \n",
+      " 9   W_PTS     34089 non-null  int64  \n",
+      " 10  L         34089 non-null  object \n",
+      " 11  L_PTS     34089 non-null  int64  \n",
+      " 12  Injury    34089 non-null  int64  \n",
+      " 13  Starter   34089 non-null  int64  \n",
+      " 14  FG        34089 non-null  float64\n",
+      " 15  FGA       34089 non-null  float64\n",
+      " 16  FG_perc   34089 non-null  float64\n",
+      " 17  3P        34089 non-null  float64\n",
+      " 18  3PA       34089 non-null  float64\n",
+      " 19  3P_perc   34089 non-null  float64\n",
+      " 20  FT        34089 non-null  float64\n",
+      " 21  FTA       34089 non-null  float64\n",
+      " 22  FT_perc   34089 non-null  float64\n",
+      " 23  ORB       34089 non-null  float64\n",
+      " 24  DRB       34089 non-null  float64\n",
+      " 25  TRB       34089 non-null  float64\n",
+      " 26  AST       34089 non-null  float64\n",
+      " 27  STL       34089 non-null  float64\n",
+      " 28  BLK       34089 non-null  float64\n",
+      " 29  TOV       34089 non-null  float64\n",
+      " 30  PF        34089 non-null  float64\n",
+      " 31  PTS       34089 non-null  float64\n",
+      " 32  +/-       34089 non-null  float64\n",
+      " 33  TS_perc   34089 non-null  float64\n",
+      " 34  eFG_perc  34089 non-null  float64\n",
+      " 35  3PAr      34089 non-null  float64\n",
+      " 36  FTr       34089 non-null  float64\n",
+      " 37  ORB_perc  34089 non-null  float64\n",
+      " 38  DRB_perc  34089 non-null  float64\n",
+      " 39  TRB_perc  34089 non-null  float64\n",
+      " 40  AST_perc  34089 non-null  float64\n",
+      " 41  STL_perc  34089 non-null  float64\n",
+      " 42  BLK_perc  34089 non-null  float64\n",
+      " 43  TOV_perc  34089 non-null  float64\n",
+      " 44  USG_perc  34089 non-null  float64\n",
+      " 45  ORtg      34089 non-null  float64\n",
+      " 46  DRtg      34089 non-null  float64\n",
+      " 47  BPM       34089 non-null  float64\n",
       "dtypes: float64(37), int64(5), object(6)\n",
-      "memory usage: 12.2+ MB\n"
+      "memory usage: 12.5+ MB\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arranged-joining",
+   "id": "artificial-leather",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "printable-kenya",
+   "id": "consolidated-router",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "manual-actor",
+   "id": "diagnostic-hardware",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-cookbook",
+   "id": "wound-found",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "found-therapy",
+   "id": "independent-stamp",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dangerous-kazakhstan",
+   "id": "dress-speaking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "skilled-replacement",
+   "id": "eleven-snake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "optional-granny",
+   "id": "billion-enemy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "continental-edmonton",
+   "id": "middle-retreat",
    "metadata": {},
    "outputs": [
     {
@@ -327,62 +327,62 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 21113 entries, 0 to 21112\n",
+      "RangeIndex: 21588 entries, 0 to 21587\n",
       "Data columns (total 50 columns):\n",
       " #   Column      Non-Null Count  Dtype  \n",
       "---  ------      --------------  -----  \n",
-      " 0   date        21113 non-null  object \n",
-      " 1   name        21113 non-null  object \n",
-      " 2   team        21113 non-null  object \n",
-      " 3   opp         21113 non-null  object \n",
-      " 4   fpts        21113 non-null  float64\n",
-      " 5   mp          21113 non-null  float64\n",
-      " 6   fppm        21113 non-null  float64\n",
-      " 7   home        21113 non-null  int64  \n",
-      " 8   w           21113 non-null  object \n",
-      " 9   w_pts       21113 non-null  int64  \n",
-      " 10  l           21113 non-null  object \n",
-      " 11  l_pts       21113 non-null  int64  \n",
-      " 12  injury      21113 non-null  int64  \n",
-      " 13  starter     21113 non-null  int64  \n",
-      " 14  fg          21113 non-null  int64  \n",
-      " 15  fga         21113 non-null  int64  \n",
-      " 16  fg_perc     21113 non-null  float64\n",
-      " 17  3p          21113 non-null  int64  \n",
-      " 18  3pa         21113 non-null  int64  \n",
-      " 19  3p_perc     21113 non-null  float64\n",
-      " 20  ft          21113 non-null  int64  \n",
-      " 21  fta         21113 non-null  int64  \n",
-      " 22  ft_perc     21113 non-null  float64\n",
-      " 23  orb         21113 non-null  int64  \n",
-      " 24  drb         21113 non-null  int64  \n",
-      " 25  trb         21113 non-null  int64  \n",
-      " 26  ast         21113 non-null  int64  \n",
-      " 27  stl         21113 non-null  int64  \n",
-      " 28  blk         21113 non-null  int64  \n",
-      " 29  tov         21113 non-null  int64  \n",
-      " 30  pf          21113 non-null  int64  \n",
-      " 31  pts         21113 non-null  int64  \n",
-      " 32  plus_minus  21113 non-null  float64\n",
-      " 33  ts          21113 non-null  float64\n",
-      " 34  efg         21113 non-null  float64\n",
-      " 35  3par        21113 non-null  float64\n",
-      " 36  ftr         21113 non-null  float64\n",
-      " 37  orb_perc    21113 non-null  float64\n",
-      " 38  drb_perc    21113 non-null  float64\n",
-      " 39  trb_perc    21113 non-null  float64\n",
-      " 40  ast_perc    21113 non-null  float64\n",
-      " 41  stl_perc    21113 non-null  float64\n",
-      " 42  blk_perc    21113 non-null  float64\n",
-      " 43  tov_perc    21113 non-null  float64\n",
-      " 44  usg         21113 non-null  float64\n",
-      " 45  ortg        21113 non-null  int64  \n",
-      " 46  drtg        21113 non-null  int64  \n",
-      " 47  bpm         21113 non-null  float64\n",
-      " 48  total_pts   21113 non-null  int64  \n",
-      " 49  pts_diff    21113 non-null  int64  \n",
+      " 0   date        21588 non-null  object \n",
+      " 1   name        21588 non-null  object \n",
+      " 2   team        21588 non-null  object \n",
+      " 3   opp         21588 non-null  object \n",
+      " 4   fpts        21588 non-null  float64\n",
+      " 5   mp          21588 non-null  float64\n",
+      " 6   fppm        21588 non-null  float64\n",
+      " 7   home        21588 non-null  int64  \n",
+      " 8   w           21588 non-null  object \n",
+      " 9   w_pts       21588 non-null  int64  \n",
+      " 10  l           21588 non-null  object \n",
+      " 11  l_pts       21588 non-null  int64  \n",
+      " 12  injury      21588 non-null  int64  \n",
+      " 13  starter     21588 non-null  int64  \n",
+      " 14  fg          21588 non-null  int64  \n",
+      " 15  fga         21588 non-null  int64  \n",
+      " 16  fg_perc     21588 non-null  float64\n",
+      " 17  3p          21588 non-null  int64  \n",
+      " 18  3pa         21588 non-null  int64  \n",
+      " 19  3p_perc     21588 non-null  float64\n",
+      " 20  ft          21588 non-null  int64  \n",
+      " 21  fta         21588 non-null  int64  \n",
+      " 22  ft_perc     21588 non-null  float64\n",
+      " 23  orb         21588 non-null  int64  \n",
+      " 24  drb         21588 non-null  int64  \n",
+      " 25  trb         21588 non-null  int64  \n",
+      " 26  ast         21588 non-null  int64  \n",
+      " 27  stl         21588 non-null  int64  \n",
+      " 28  blk         21588 non-null  int64  \n",
+      " 29  tov         21588 non-null  int64  \n",
+      " 30  pf          21588 non-null  int64  \n",
+      " 31  pts         21588 non-null  int64  \n",
+      " 32  plus_minus  21588 non-null  float64\n",
+      " 33  ts          21588 non-null  float64\n",
+      " 34  efg         21588 non-null  float64\n",
+      " 35  3par        21588 non-null  float64\n",
+      " 36  ftr         21588 non-null  float64\n",
+      " 37  orb_perc    21588 non-null  float64\n",
+      " 38  drb_perc    21588 non-null  float64\n",
+      " 39  trb_perc    21588 non-null  float64\n",
+      " 40  ast_perc    21588 non-null  float64\n",
+      " 41  stl_perc    21588 non-null  float64\n",
+      " 42  blk_perc    21588 non-null  float64\n",
+      " 43  tov_perc    21588 non-null  float64\n",
+      " 44  usg         21588 non-null  float64\n",
+      " 45  ortg        21588 non-null  int64  \n",
+      " 46  drtg        21588 non-null  int64  \n",
+      " 47  bpm         21588 non-null  float64\n",
+      " 48  total_pts   21588 non-null  int64  \n",
+      " 49  pts_diff    21588 non-null  int64  \n",
       "dtypes: float64(20), int64(24), object(6)\n",
-      "memory usage: 8.1+ MB\n"
+      "memory usage: 8.2+ MB\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legislative-ordinance",
+   "id": "former-calgary",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "coral-success",
+   "id": "streaming-prize",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
     "    \n",
     "    print(f'Last date: {last_date}\\n')\n",
     "    assert(not contains_missing_data(clean_df))\n",
-    "    assert(not len([char for char in ''.join(clean_df.columns) if char.isupper() or char== '-' ]))\n",
+    "    assert(not len([char for char in ''.join(clean_df.columns) if char.isupper() or char == '-' ]))\n",
     "    assert(not len(clean_df.loc[clean_df['mp'] == 0.0]))\n",
     "    \n",
     "    \n",
@@ -432,14 +432,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "impressive-integral",
+   "id": "broadband-little",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last date: 2023-03-10\n",
+      "Last date: 2023-03-13\n",
       "\n"
      ]
     }
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affiliated-values",
+   "id": "brown-bonus",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -459,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
